# SwarmathonIV-Cabrillo-Public

./: .gitattributes  .gitignore  .gitmodules  CODEOWNERS  README.md  SwarmieInstall.md  TestResults.txt  gazeboDropoff.py  object.urdf  rqt_multiplot.xml  run.sh
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
Swarmathon/: .project
Swarmathon-Arduino/CabrilloCalibrator/: CabrilloCalibrator.ino
Swarmathon-Arduino/Covariance/: Covariance.ino
Swarmathon-Arduino/Swarmathon_Arduino/: Swarmathon_Arduino.ino
arduino/: .gitignore  Swarmathon_Arduino.ino  SwarmieArduino.ino
arduino/libraries/Calbration/: Calibration.cpp  Calibration.h
arduino/swarmie_control/: swarmie_control  swarmie_control.ino
config/: grid_map_rviz.yaml  rviz_view.rviz
doc/mapping/: index.html
doc/mapping/srv/: _FindTarget.m.html  _GetMap.m.html  index.html
doc/mobility/: driver.m.html  index.html  swarmie.m.html  task.m.html
doc/mobility/cfg/: driveConfig.m.html  index.html
doc/mobility/msg/: _MoveRequest.m.html  _MoveResult.m.html  index.html
doc/mobility/srv/: _Core.m.html  index.html
launch/: pid_tune.launch  rover_gui.launch  rover_gui_no_multimaster.launch  rviz_mapping.launch  swarmie.launch
misc/: CartersNotes.txt  buildSwarmieTemplates.sh  build_arduino.sh  calibrate_imu.sh  deploy_calibration.sh  deploy_covariance.sh  deploy_host.sh  deploy_rover.sh  do_cal.py  do_covariance.py  expand-key.py  gen_docs.sh  gen_eclipse_project.sh  pid_tuning_hopper.xml  pid_tuning_lovelace.xml  pid_tuning_turing.xml  plot_achilles.xml  plot_lovelace.xml  plot_maverick.xml  roboBuild.sh  rover_onboard_calibration.sh  rover_onboard_covariance.sh  rover_onboard_node_launch.sh  run_headless_sim.sh  start_rover.sh  stop_rover.sh
simulation/models/achilles/: model.config  model.sdf
simulation/models/aeneas/: model.sdf
simulation/models/aerial_cam/: model.sdf
simulation/models/ajax/: model.config  model.sdf
simulation/models/at0_2/: model.config  model.sdf
simulation/models/collection_disk/: model.sdf
simulation/models/diomedes/: model.config  model.sdf
simulation/models/element618/: model.config  model.sdf
simulation/models/hector/: model.config  model.sdf
simulation/models/lovelace/: model.config  model.sdf
simulation/worlds/: 14X14_powerlaw1_128.world  14X14_powerlaw1_obst_128.world  14X14_powerlaw2_128.world  14X14_powerlaw2_obst_128.world  14X14_powerlaw3_128.world  14X14_powerlaw3_obst_128.world  14X14_powerlaw4_128.world  14X14_powerlaw4_obst_128.world  14X14_powerlaw5_128.world  14X14_powerlaw5_obst_128.world  256_powerlaw1_14X14.world  4clusters_128_close_to_center.world  4clusters_128_close_to_walls.world  4clusters_128_close_to_walls2.world  4clusters_128_far_to_center.world  CabrilloMissionToMar.world  CabrilloMissionToMars.world  clustered_512targets.world  single_block.world  uniform_128targets_example.world
src/apritags2to1/: CMakeLists.txt  package.xml  setup.py
src/apritags2to1/scripts/: apriltag_converter_node.py
src/apritags2to1/src/apriltags2to1/: __init__.py  apriltag_converter.py
src/behaviours/: CMakeLists.txt
src/behaviours/src/: ROSAdapter.cpp
src/bridge/: CMakeLists.txt  package.xml
src/bridge/cfg/: params.py  pid.py
src/bridge/msg/: PidState.msg  PidWheel.msg
src/bridge/src/: abridge.cpp  pid.cpp  pid.h  sbridge.cpp
src/cabrillo_gui/: CMakeLists.txt  package.xml  plugin.xml
src/diagnostics/: CMakeLists.txt  package.xml  setup.py
src/diagnostics/scripts/: diagnostics.py  diags_node.py
src/diagnostics/src/: Diagnostics.cpp  Diagnostics.h  driver.cpp
src/diagnostics/src/diagnostics/: __init__.py  diags.py  watcher.py
src/gazebo_plugins/: CMakeLists.txt
src/mapping/: CMakeLists.txt  package.xml  setup.py
src/mapping/cfg/: mapping.cfg
src/mapping/config/: map_reconfigure.perspective  obstacle_map.yaml  occupancy_grids.rviz  rviz_view.rviz  target_and_obstacle_mapping_achilles.rviz  target_map.yaml
src/mapping/scripts/: findcenter.py
src/mapping/src/: mapping.cpp
src/mapping/src/mapping/: __init__.py
src/mapping/srv/: FindTarget.srv  GetMap.srv  GetNavPlan.srv  LatestTarget.srv
src/mobility/: CMakeLists.txt  package.xml  setup.py
src/mobility/cfg/: drive.py  params.py
src/mobility/config/: grid_map_rviz.yaml  home_tag_corner_poses_achilles.rviz  rviz_view.rviz  target_map.yaml  targets_block_location.rviz
src/mobility/msg/: HomeTransformAuthority.msg  MoveRequest.msg  MoveResult.msg  Task.msg  TaskResult.msg
src/mobility/resources/: atag-0.p
src/mobility/scripts/: cal_imu.py  coordinate.py  core.py  dropoff.py  find_corner.py  gohome.py  home_transform.py  imu_covariance.py  init.py  odom_heading.py  pickup.py  planner.py  rdb.py  search.py  searchc.py  searchn.py  sonar_test.py  targets_block_location.py  task.py  teleop_keyboard.py  teleop_twist_keyboard.py  test_square.py  trash.txt
src/mobility/src/: DropOffController.cpp  DropOffController.h  Logger.cpp  Logger.h  PickUpController.cpp  PickUpController.h  SearchController.cpp  SearchController.h  mapping.cpp  mobility.cpp
src/mobility/src/mobility/: __init__.py  driver.py  namespace.py  planner.py  swarmie.py  task.py  utils.py
src/mobility/src/mobility/behavior/: __init__.py  calibrate_imu.py  dropoff.py  escape_home.py  find_home_corner.py  gohome.py  init.py  pickup.py  queue.py  search.py
src/mobility/srv/: Controller.srv  Core.srv  GetMap.srv  GetRoverNames.srv  Queue.srv  QueueRemove.srv  SetHomeTransformOption.srv
src/obstacle_detection/: CMakeLists.txt  package.xml
src/obstacle_detection/msg/: Obstacle.msg
src/obstacle_detection/src/: obstacle.cpp
src/obstacle_detection/srv/: DetectionMask.srv
src/rqt_rover_gui/: CMakeLists.txt  README.md  package.xml
src/swarmie/: CMakeLists.txt  package.xml
src/swarmie/launch/: apriltags.xml  block_locations.launch  grid_map_visualization.launch  grid_map_visualization.yaml  image_pipeline.xml  robot_localization.xml  swarmie.xml  tf.xml  topic_tools.xml
src/swarmie_msgs/: CMakeLists.txt  package.xml
velodyne_plugin/: CMakeLists.txt  velodyne_plugin.cc
(+63 files in other folders)
