<?xml version="1.0"?>
<package>
  <name>apriltags2to1</name>
  <version>0.0.1</version>
  <description>Convert apriltags2_ros/AprilTagDectectionArrays to
  apriltags_ros/AprilTagDectectionArrays.
  </description>

  <maintainer email="darrenmchurchill@gmail.com">Darren Churchill</maintainer>

  <license>MIT</license>

  <author email="darrenmchurchill@gmail.com">Darren Churchill</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltags2_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>apriltags2_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
