<?xml version="1.0"?>
<package>

  <name>diagnostics</name>
  <version>0.0.1</version>
  <description>The diagnostics package</description>
  <maintainer email="swarmathon@cs.unm.edu">NASA Swarmathon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>

 </package>
