<?xml version="1.0"?>
<package>
  <name>mapping</name>
  <version>0.1.0</version>
  <description>A package to collect rover data and make maps.</description>

  <maintainer email="michael.matera@cabrillo.edu">Mike Matera</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>swarmie_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>apriltags_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>swarmie_msgs</run_depend>

  <export>
  </export>
</package>
